src/test/ui/rfc-2091-track-caller/error-with-main.stderr
error: `main` function is not allowed to be `#[track_caller]`
  --> $DIR/error-with-main.rs:1:1
   |
LL |   #[track_caller]
   |   ^^^^^^^^^^^^^^^
LL | / fn main() {
LL | |     panic!("{}: oh no", std::panic::Location::caller());
LL | | }
   | |_- `main` function is not allowed to be `#[track_caller]`

error: aborting due to previous error

